# vibe-blog

./: .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  vercel.json
api/: index.py
backend/routes/: blog_routes.py
backend/services/blog_generator/agents/: assembler.py
docker/: DOCKER_DEPLOY.md  Dockerfile.frontend  docker-compose.yml  start-local.sh
frontend/src/views/: Generate.vue
scripts/: analyze_e2e_logs.py  run_e2e.ps1
tests/backend/: test_68_01_architecture.py  test_68_01_governance.py  test_75_10_e2e_verification.py  test_assembler_footnotes.py  test_executor_race_fix.py
tests/e2e/: conftest.py
tests/unit/: test_memory_system.py
vibe-blog/backend/: Dockerfile  logging_config.py
vibe-blog/backend/services/blog_generator/: __init__.py
vibe-blog/backend/services/blog_generator/parallel/: executor.py
vibe-blog/backend/services/blog_generator/utils/: task_log.py
